[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ColorPicker.gd" type="Script" id=1]
[ext_resource path="res://assets/icon buttons/round icons/RED.png" type="Texture" id=2]
[ext_resource path="res://assets/icon buttons/round icons/BLUE.png" type="Texture" id=3]
[ext_resource path="res://assets/icon buttons/round icons/BLACK.png" type="Texture" id=4]

[node name="Colors" type="HBoxContainer"]
margin_right = 336.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="TextureButton" parent="."]
margin_right = 98.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Green" type="TextureButton" parent="."]
margin_left = 118.0
margin_right = 217.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Yellow" type="TextureButton" parent="."]
margin_left = 237.0
margin_right = 336.0
margin_bottom = 168.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="White" type="TextureButton" parent="."]
visible = false
margin_left = 341.0
margin_right = 480.0
margin_bottom = 112.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
expand = true
stretch_mode = 5

[connection signal="pressed" from="Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="White" to="." method="_on_White_pressed"]
